[package]
name = "capgun"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "fire when ready file watcher"
documentation = "http://github.com/softprops/capgun"
homepage = "https://github.com/softprops/capgun"
repository = "https://github.com/softprops/capgun"
keywords = ["clap", "term", "notify", "unix", "watch"]
license = "MIT"

[dependencies]
notify = "2.1"
term = "0.2.9"
clap = "0.11.0"